--- a/views/page2.handlebars
+++ b/views/page2.handlebars
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8"/>
   <!-- passed in variables in handlebars are surrounded by two curly braces like the following
-       Any variable you pass into res.render will be available by name in the template through
-       the curly braces
+      Any variable you pass into res.render will be available by name in the template through
+      the curly braces
   -->
   <title>{{title}}</title>
 </head>
@@ -14,8 +14,9 @@
   <a href="/">Home</a>
   <a href="/page1">Page 1</a>
   <a href="/page3">Page 3</a>
+  <a href="/page4">Page 4</a>
   
-  <form action="/setName" method="POST">
+  <form action="/setCName" method="POST">
     <label for="firstname">First name:</label>
     <input type="text" name="firstname" value="">
     <label for="lastname">Last Name: </label>
