--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -14,5 +14,25 @@
   <a href="/">Home</a>
   <a href="/page1">Page 1</a>
   <a href="/page2">Page 2</a>
+  <a href="/page4">Page 4</a>
+  
+  <form action="/setDName" method="POST">
+    <label for="firstname">Name:</label>
+    <input type="text" name="name" value="">
+    <label for="lastname">Breed: </label>
+    <input type="text" name="breed" value="">
+    <label for="beds">Age:</label>
+    <input type="number" name="age" value="">
+    <input type="submit" value="submit">
+  </form>
+  
+  <br/>
+  <br/>
+  
+  <form action="ageByName" method="POST">
+    <label for="name">Dog to age up:</label>
+    <input type="text" name="name" value="">
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
